Crash in [@ nsWindow::WaylandPopupMovePlain]
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox105 | --- | unaffected |
| firefox106 | --- | unaffected |
| firefox107 | --- | fixed |
People
(Reporter: bc, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
Crash report: https://crash-stats.mozilla.org/report/index/b45dfa43-1fd0-46a0-ad57-ccd680220919
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(gtk_window_get_type_hint(((((GtkWindow*) g_type_check_instance_cast ((GTypeInstance*) ((mShell)), ((gtk_window_get_type ()))))))) == GDK_WINDOW_TYPE_HINT_UTILITY)
Top 10 frames of crashing thread:
0 libxul.so nsWindow::WaylandPopupMovePlain widget/gtk/nsWindow.cpp:2569
1 libxul.so nsWindow::WaylandPopupMoveImpl widget/gtk/nsWindow.cpp:2621
2 libxul.so nsWindow::UpdateWaylandPopupHierarchy widget/gtk/nsWindow.cpp:1887
3 libxul.so nsWindow::NativeShow widget/gtk/nsWindow.cpp:6474
4 libxul.so nsWindow::Show widget/gtk/nsWindow.cpp:940
5 libxul.so nsView::DoResetWidgetBounds view/nsView.cpp
5 libxul.so nsView::ResetWidgetBounds view/nsView.cpp:189
5 libxul.so nsViewManager::ProcessPendingUpdatesForView view/nsViewManager.cpp:355
6 libxul.so nsViewManager::ProcessPendingUpdates view/nsViewManager.cpp:942
7 libxul.so nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2758
This and the other crashes I experienced are on Fedora 36 and had widget.wayland.use-move-to-rect = false and occurred almost everywhere but especially attempting to view a crash report. Setting the pref to true stopped the crashes (for now).
| Assignee | ||
Comment 2•3 years ago
|
||
Can you test with widget.wayland.use-move-to-rect = true?
widget.wayland.use-move-to-rect is a hack for testing only.
| Assignee | ||
Comment 3•3 years ago
|
||
Also please attach your about:support.
Thanks.
| Reporter | ||
Comment 4•3 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #2)
Can you test with widget.wayland.use-move-to-rect = true?
widget.wayland.use-move-to-rect is a hack for testing only.
As I mentioned in comment 0, widget.wayland.use-move-to-rect true does not crash.
| Reporter | ||
Comment 5•3 years ago
|
||
Note this about:support is using my current setting widget.wayland.use-move-to-rect: true but the crashes occurred with it set to false.
Comment 6•3 years ago
|
||
Set release status flags based on info from the regressing bug 1789581
| Assignee | ||
Comment 7•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Comment 9•3 years ago
|
||
| bugherder | ||
Description
•