Bug 1791469 [Wayland] Accept plain move for tooltips r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D157806